--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -29,4 +29,7 @@ test:
 # and move the `production:` environment over there.
 
 production:
+  database_name: fake_production
+  database_username: fake
+  database_password: 12345678
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
